Gave the akh a better sign

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,15 +22,14 @@
   
     <body>
         <header class='wrapper'>
+            <span id='version'>V2.0</span>
             <div id='title' class="group">
-                <div id="logo">
-                    <h1 id='logo-text'>Nu</h1>
-                </div>
+                <div id="logo"><img src='images/akh.svg' /></div>
                 <p id='title-text'>
-                    <span id="blurb">Infinitely Lazy Javascript Streams</span>
-                    <span id='version'>V3.3</span>
+                    <span id="blurb">Javascript Monad Transformers</span>
                 </p>
             </div>
+            
             <nav id='pages' class='group cf'>
                 <ul>
                     <li><a href="https://github.com/mattbierner/nu/wiki">Documentation</a></li>
