Described the Akh

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <meta name="description" content="">
         
-        <title>Nu</title>
+        <title>Akh</title>
         
         <link rel="stylesheet" href="stylesheets/styles.css">
         <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -32,9 +32,9 @@
             
             <nav id='pages' class='group cf'>
                 <ul>
-                    <li><a href="https://github.com/mattbierner/nu/wiki">Documentation</a></li>
-                    <li><a href="https://npmjs.org/package/nu-stream">NPM Package</a></li>
-                    <li><a href="https://github.com/mattbierner/nu">Github Source</a></li>
+                    <li><a href="https://github.com/mattbierner/akh/wiki">Documentation</a></li>
+                    <li><a href="https://www.npmjs.org/package/akh">NPM Package</a></li>
+                    <li><a href="https://github.com/mattbierner/akh">Github Source</a></li>
                 </ul>
             </nav>
         </header>
