gave the Akh some legal protection

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,7 +24,7 @@
         <header class='wrapper'>
             <span id='version'>V2.0</span>
             <div id='title' class="group">
-                <div id="logo"><img src='images/akh.svg' /></div>
+                <div id="logo" ><img src='images/akh.svg' /></div>
                 <p id='title-text'>
                     <span id="blurb">Javascript Monad Transformers</span>
                 </p>
@@ -52,6 +52,9 @@
             </p>
             <p id="hosting-credits" class='credits'>
                 <span>Hosted on GitHub Pages</span>
+            </p>
+             <p id="dodo-credits" class='credits'>
+                <span>Do-Do © Warner Bros.</span>
             </p>
         </footer>
     
