--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
-        <meta name="description" content="">
+        <meta name="description" content="Javascript monad transformer library">
         
         <title>Akh</title>
         
@@ -24,7 +24,7 @@
         <header class='wrapper'>
             <span id='version'>V2.0</span>
             <div id='title' class="group">
-                <div id="logo" ><img src='images/akh.svg' /></div>
+                <div id="logo" onclick="document.title+='!'"><img src='images/akh.svg' /></div>
                 <p id='title-text'>
                     <span id="blurb">Javascript Monad Transformers</span>
                 </p>
